--- a/src/components/ProfilComp.css
+++ b/src/components/ProfilComp.css
@@ -1,16 +1,41 @@
-.user-info__stat {
-    flex: 1;
-}
-
-.user-info__stat p {
-    margin: 0;
-    white-space: nowrap;
-}
 
 .user-info {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
 }
+
+.user-info__text {
+    text-decoration: none;
+    order: 0;
+    flex: 1 1 auto;
+    align-self: stretch;
+}
+
+.user-info__stats {
+    list-style: none;
+    order: 0;
+    flex: 4 1 auto;
+    align-self: stretch;
+
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
+}
+
+.user-info__stat {
+    order: 0;
+    flex: 1 1 auto;
+    align-self: stretch;
+}
+
 
 .user-info__avatar {
     border-radius: 50%;
@@ -18,11 +43,6 @@
     height: 50px;
     margin-right: 1em;
     float: left;
-}
-
-.user-info__text {
-    text-decoration: none;
-    flex: 1;
 }
 
 .user-info__title {
@@ -35,13 +55,6 @@
     white-space: nowrap;
 }
 
-.user-info__stats {
-    list-style: none;
-    padding: 0;
-    flex: 1;
-    display: flex;
-}
-
 .user-info__stats a {
     color: white;
     text-decoration: none;
@@ -49,14 +62,6 @@
     font-variant: small-caps;
     text-align: center;
 }
-
-.userinfo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: left;
-}
-
 .userinfo > img {
     margin-right: 1em;
     height: 36px;
